--- a/public/500.html
+++ b/public/500.html
@@ -58,9 +58,9 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>We're sorry, but something went wrong.</h1>
+      <h1>Oops !! The page you requested could not be found.</h1>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>We are working on resolving this issue..</p>
   </div>
 </body>
 </html>
